@startuml

class TodoListApplication
{
    +start(Stage)
    +main(String[])
    'calls launch() which calls start
    'shows the stage
}

class ToDoHomeController
{
    -ToggleGroup FilterGroup
    -RadioButton allItemsFilterButton;
    -RadioButton completedItemsFilterButton;
    -RadioButton incompletedItemsFilterButton;
    -CheckBox completedCheckMark;
    -DatePicker datePicker;
    -TextField descriptionField;
    -ListView<Item> filteredItems;
    -ArrayList<Item> itemList;
    -Label errLabel;

    +deleteAllItems(ActionEvent)
    +deleteAllItemsFunction(ArrayList<Item): ArrayList<Item>
    +deleteItem(ActionEvent)
    +deleteItemFunction(int, ArrayList<Item>): ArrayList<Item>
    +addItem(ActionEvent)
    +addItemFunction(): Item
    -editItem(ActionEvent)
    +editFunction(int, ArrayList<Item>, Item): ArrayList<Item>
    +loadListFromMemory(ActionEvent)
    +saveListToMemory(ActionEvent)
    -updateGuiWithLoadedList(ArrayList<Item>)
    -getMarkedItems(List<Item>): List<Item>
    -getUnmarkedItems(List<Item>): List<Item>
    -getAllItems(List<Item>): List<Item>
    +radioButtonChanged()
    +initialize()
    +validInputCheck(String)
}

class Item
{
    +String description;
    +String dueDate;
    +boolean marked;

    +getDescription: String
    +getDueDate: String
    +getMarked: boolean
    +toString(): String
}

class FileParse
{
    +loadFile(String): ArrayList<Item>
    -convertFileToList(List<String>): ArrayList<Item>
}

class FileSave
{
    +saveFile(String, List<Item>)
}

TodoListApplication -- ToDoHomeController
ToDoHomeController --* Item
ToDoHomeController --* FileSave
ToDoHomeController --* FileParse


@enduml